counter_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
spec:
  replicas: 4
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: main
          image: ondrejsika/counter
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 100Mi
