frontend_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - ondrej-counter-frontend.dhl.sikademo.com
      secretName: ondrej-counter-frontend.dhl.sikademo.com-tls
  rules:
    - host: ondrej-counter-frontend.dhl.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
